# Grow-Pulse

./: .env.example  .gitignore  README.md  config.yaml  mcp_servers.json  pyproject.toml  run_pipeline.py  scratch_fetch.py
data/: actual_reviews.json  phase3_output.json  rendered_doc.md  rendered_email.html
data/receipts/: groww_2026-W25.json
design/: DESIGN.md  code.html
docs/: Implementation-plan.md  architecture.md  edge-cases.md  problemStatement.md  problemStatement.txt
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: DashboardClient.tsx  ReviewExplorer.tsx  Sidebar.tsx  ThemeCard.tsx
frontend/src/lib/: data.ts  types.ts
groww_pulse/: __main__.py  clustering.py  config.py  delivery.py  ingestion.py  pii.py  receipts.py  renderer.py  summarizer.py
mcp_servers/playstore_reviews/: scraper.py  server.py
tests/: test_clustering.py  test_config.py  test_delivery.py  test_ingestion.py  test_pii.py  test_receipts.py  test_renderer.py  test_scraper.py  test_summarizer.py
